<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BuaaShortyTallActivity!</string>
    <string name="app_name">MyHealth</string>

    <!-- account -->
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆 </string>
	<string name="register">注册</string>
	
	 <!-- search -->
    <string name="drugname">药品名</string>
    
    <!--drug detail  -->
    <string name="points">当前评分</string>
    <string name="drugdetail_comments">用户评论</string>
    <string name="personal_store">收藏</string>
    <string name="personal_recommend">推荐</string>
    <string name="sendit_weibo">分享到微博</string>
    <string name="buy">购买链接</string>
    
    <!-- function -->
    <string name="more_function">更多功能</string>
    <string name="about_us">关于我们</string>
    <string name="query_doctor">咨询医生</string>
    <string name="personal_center">个人中心</string>
    
    <!-- question answer -->
    <string name="moreAnswer">更多答案</string>
    <!-- news -->
    <string name="news_load_error">网络加载错误，请稍后再试</string>
    <string name="news_detail_comment">请输入评论</string>

</resources>