<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item 
        android:id = "@+id/menu_function"
        android:icon="@drawable/more"
        android:showAsAction="ifRoom"
        android:title="@string/more_function"
        >
        <menu>
    	    <item android:id="@+id/personal_store"
    	        android:title="@string/personal_store"
    	        android:icon="@drawable/person"
    	    />
    	    <item android:id="@+id/personal_recommend"
    	        android:title="@string/personal_recommend"
    	        android:icon="@drawable/ask"
    	    />
    	    <item android:id="@+id/sendit_weibo"
    	        android:title="@string/sendit_weibo"
    	        android:icon="@drawable/about"
    	    />
    	</menu> 
    </item>

</menu>